[package]
name = "raised-server"
version = "0.1.0"
authors = ["David Bonet <webbonet@gmail.com>"]
edition = "2018"

[dependencies]
ws = "^0.8"
time = "^0.1"
uuid = { version = "0.3", features = ["serde", "v4"] }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
log = "0.4.0"
env_logger = "0.6.1"
paste = "0.1.5"
casey = "0.1.1"
